{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 719,
  "lineage": "037c77b6-3569-3670-2239-28cf366925e6",
  "resources": [
    {
      "module": "module.httpservers",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "private_ip",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.132.10.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2019-11-13T06:47:54.613-08:00",
            "id": "coral-shoreline-234300/europe-west3/server-private-ip-0",
            "name": "server-private-ip-0",
            "network_tier": "PREMIUM",
            "project": "coral-shoreline-234300",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/addresses/server-private-ip-0",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork-task2",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/www-server-0"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "10.132.10.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2019-11-13T06:47:54.812-08:00",
            "id": "coral-shoreline-234300/europe-west3/server-private-ip-1",
            "name": "server-private-ip-1",
            "network_tier": "PREMIUM",
            "project": "coral-shoreline-234300",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/addresses/server-private-ip-1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork-task2",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/www-server-1"
            ]
          }
        }
      ]
    },
    {
      "module": "module.httpservers",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public_ip",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.246.197.29",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-11-13T06:47:09.572-08:00",
            "id": "coral-shoreline-234300/europe-west3/server-public-ip-0",
            "name": "server-public-ip-0",
            "network_tier": "PREMIUM",
            "project": "coral-shoreline-234300",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/addresses/server-public-ip-0",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/www-server-0"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "35.246.199.254",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-11-13T06:47:09.581-08:00",
            "id": "coral-shoreline-234300/europe-west3/server-public-ip-1",
            "name": "server-public-ip-1",
            "network_tier": "PREMIUM",
            "project": "coral-shoreline-234300",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/addresses/server-public-ip-1",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/www-server-1"
            ]
          }
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.89.251.210",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-11-13T06:47:09.570-08:00",
            "id": "coral-shoreline-234300/europe-west3/server-ip-loadbalancer",
            "name": "server-ip-loadbalancer",
            "network_tier": "PREMIUM",
            "project": "coral-shoreline-234300",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/addresses/server-ip-loadbalancer",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/terraform-loadbalancer"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-13T06:47:26.458-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "loadbalancerrule",
            "name": "loadbalancerrule",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2",
            "priority": 1000,
            "project": "coral-shoreline-234300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/firewalls/loadbalancerrule",
            "source_ranges": [
              "10.132.10.0/24",
              "156.17.151.242",
              "88.156.131.231/32",
              "89.64.58.225"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-balancer"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.terraform-task2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-13T06:47:26.456-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "httpserverrule",
            "name": "httpserverrule",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2",
            "priority": 1000,
            "project": "coral-shoreline-234300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/firewalls/httpserverrule",
            "source_ranges": [
              "10.132.10.0/24",
              "156.17.151.242",
              "88.156.131.231/32",
              "89.64.58.225"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.terraform-task2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall3",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-13T06:47:26.522-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "loadbalancerrule2",
            "name": "loadbalancerrule2",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2",
            "priority": 1000,
            "project": "coral-shoreline-234300",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/firewalls/loadbalancerrule2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-balancer"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.terraform-task2"
          ]
        }
      ]
    },
    {
      "module": "module.httpservers",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "httpservers",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20191014",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/disks/www-server-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "www-server-0",
            "instance_id": "3169052844307360079",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "terraform:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWRCPT02nNoPEoc2cgcZvsQKjIdLnG5HaNqDZkDTWFiUVU4Wy5+NJmPOO831CBF0c7+PAsMQLETng6eQCCB0o8pviK1+BNJMXgKzKaQnavQToFHB2zZl3BDLF6ZU3GkpLuMiNjrXPa9/kK7hIgCxL2W1VFCTVCboanAqcPPbZon1565W4Z//fe42e6zYQoFrckAS9hwIypnWlw7+zvYfqc1rPwvvms6msga+YJgEfg22Fbq0luqOmhxZ3Ib2s1IoCKURSHyCps90Wc+u3+gnFlTZKgemT5Us+Nx8ioA+qpHtqsDwo829puPt1MXWRaGTONKhIl+4AFhi1RWMXmdF1d oskar@MacBook-Pro-Oskar.local\n"
            },
            "metadata_fingerprint": "turKukEto2A=",
            "name": "www-server-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.197.29",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2",
                "network_ip": "10.132.10.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork-task2",
                "subnetwork_project": "coral-shoreline-234300"
              }
            ],
            "project": "coral-shoreline-234300",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/www-server-0",
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-west3-b"
          },
          "depends_on": [
            "google_compute_address.private_ip",
            "google_compute_address.public_ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20191014",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/disks/www-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "www-server-1",
            "instance_id": "4990779264608610639",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "terraform:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWRCPT02nNoPEoc2cgcZvsQKjIdLnG5HaNqDZkDTWFiUVU4Wy5+NJmPOO831CBF0c7+PAsMQLETng6eQCCB0o8pviK1+BNJMXgKzKaQnavQToFHB2zZl3BDLF6ZU3GkpLuMiNjrXPa9/kK7hIgCxL2W1VFCTVCboanAqcPPbZon1565W4Z//fe42e6zYQoFrckAS9hwIypnWlw7+zvYfqc1rPwvvms6msga+YJgEfg22Fbq0luqOmhxZ3Ib2s1IoCKURSHyCps90Wc+u3+gnFlTZKgemT5Us+Nx8ioA+qpHtqsDwo829puPt1MXWRaGTONKhIl+4AFhi1RWMXmdF1d oskar@MacBook-Pro-Oskar.local\n"
            },
            "metadata_fingerprint": "turKukEto2A=",
            "name": "www-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.199.254",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2",
                "network_ip": "10.132.10.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork-task2",
                "subnetwork_project": "coral-shoreline-234300"
              }
            ],
            "project": "coral-shoreline-234300",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/www-server-1",
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-west3-b"
          },
          "depends_on": [
            "google_compute_address.private_ip",
            "google_compute_address.public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "loadbalancer",
      "provider": "provider.google",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20191014",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/disks/terraform-loadbalancer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "terraform-loadbalancer",
            "instance_id": "629127486032161024",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "oskar:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDWRCPT02nNoPEoc2cgcZvsQKjIdLnG5HaNqDZkDTWFiUVU4Wy5+NJmPOO831CBF0c7+PAsMQLETng6eQCCB0o8pviK1+BNJMXgKzKaQnavQToFHB2zZl3BDLF6ZU3GkpLuMiNjrXPa9/kK7hIgCxL2W1VFCTVCboanAqcPPbZon1565W4Z//fe42e6zYQoFrckAS9hwIypnWlw7+zvYfqc1rPwvvms6msga+YJgEfg22Fbq0luqOmhxZ3Ib2s1IoCKURSHyCps90Wc+u3+gnFlTZKgemT5Us+Nx8ioA+qpHtqsDwo829puPt1MXWRaGTONKhIl+4AFhi1RWMXmdF1d oskar@MacBook-Pro-Oskar.local\n"
            },
            "metadata_fingerprint": "HSR0Ynxd0kQ=",
            "name": "terraform-loadbalancer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.251.210",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2",
                "network_ip": "10.132.10.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork-task2",
                "subnetwork_project": "coral-shoreline-234300"
              }
            ],
            "project": "coral-shoreline-234300",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/zones/europe-west3-b/instances/terraform-loadbalancer",
            "tags": [
              "http-server",
              "load-balancer"
            ],
            "tags_fingerprint": "TGhaICfLhpw=",
            "zone": "europe-west3-b"
          },
          "depends_on": [
            "google_compute_address.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "terraform-task2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "terraform-task2",
            "name": "terraform-task2",
            "project": "coral-shoreline-234300",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork-task2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-13T06:47:26.675-08:00",
            "enable_flow_logs": false,
            "fingerprint": "uHAeXHecI4Y=",
            "gateway_address": "10.132.10.1",
            "id": "europe-west3/subnetwork-task2",
            "ip_cidr_range": "10.132.10.0/24",
            "name": "subnetwork-task2",
            "network": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/global/networks/terraform-task2",
            "private_ip_google_access": false,
            "project": "coral-shoreline-234300",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coral-shoreline-234300/regions/europe-west3/subnetworks/subnetwork-task2"
          },
          "depends_on": [
            "google_compute_network.terraform-task2"
          ]
        }
      ]
    }
  ]
}